--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="service-item">
                         <i class="flaticon-036-parking"></i>
                         <h4>Travel Plan</h4>
-                        <p>Escape to our luxurious hotel for an unforgettable vacation experience. Immerse yourself in relaxation and comfort with our top-notch amenities and personalized service.</p>
+                        <p>Escape to our Motel for an unforgettable vacation experience. Immerse yourself in relaxation and comfort with our personalized service.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
