--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Sona, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Carniya Village</title>
+    <title>Carinya Village</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
             <!-- <li><i class="fa fa-phone"></i> (12) 345 67890</li> -->
               <li><i class="fa fa-phone"></i> (61) 0490 547 167</li>
                             <li><i class="fa fa-phone"></i> (61) 0452 552 467</li>
-            <li><i class="fa fa-envelope"></i> info@carniyavillage.com.au</li>
+            <li><i class="fa fa-envelope"></i> info@carinyavillage.com.au</li>
         </ul>
     </div>
     <!-- Offcanvas Menu Section End -->
@@ -79,7 +79,7 @@
                             <li><i class="fa fa-phone"></i> (61) 0490 547 167</li>
                             <li><i class="fa fa-phone"></i> (61) 0452 552 467</li>
                             
-                            <li><i class="fa fa-envelope"></i> info@carniyavillage.com.au</li>
+                            <li><i class="fa fa-envelope"></i> info@carinyavillage.com.au</li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -101,7 +101,7 @@
                         <div class="logo">
                             <a href="./index.html">
                                 <img id="carniya-logo" src="img/laterEdits/carniyalogo.jpg"  alt="">
-                                <h2 id="text-style">Carniya Village Jindabyne</h2>
+                                <h2 id="text-style">Carinya Village Jindabyne</h2>
                             </a>
                         </div>
                     </div>
@@ -149,10 +149,10 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="ap-title">
-                            <h2>Welcome To Carniya.</h2>
-                            <p>Carniya Village Jindabyne is nestled in the foothills of the Snowy Mountains on the banks of the Mowamba River, just 35 minutes from Australia’s major ski resorts. 
+                            <h2>Welcome To Carinya.</h2>
+                            <p>Carinya Village Jindabyne is nestled in the foothills of the Snowy Mountains on the banks of the Mowamba River, just 35 minutes from Australia’s major ski resorts. 
 Carniya offers comfortable, well-appointed self-contained cabins – we have Double rooms with Ensuite or a 10 bed Timber cottage or perhaps a 2 bed bunk room.
-Come to Carniya with family, a friend, group of friends, sports club, church, or School group for a quiet family holiday in summer, or a reasonably priced ski package in winter.
+Come to Carinya with family, a friend, group of friends, sports club, church, or School group for a quiet family holiday in summer, or a reasonably priced ski package in winter.
 We can tailor a holiday package to suit any budget or group requirements.</p>
                         </div>
                     </div>
@@ -312,7 +312,7 @@ We can tailor a holiday package to suit any budget or group requirements.</p>
                     </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Carniya Village,<br> Jindabyne</p></div>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Carinya Village,<br> Jindabyne</p></div>
                     </div>
                 </div>
             </div>
