--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Carniya Village</title>
+    <title>Carinya Village</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
@@ -60,7 +60,7 @@
         <ul class="top-widget">
             <li><i class="fa fa-phone"></i> (61) 0490 547 167</li>
  <li><i class="fa fa-phone"></i> (61)0452 552 467 </li>
-            <li><i class="fa fa-envelope"></i> info.carniyavillage.com.au</li>
+            <li><i class="fa fa-envelope"></i> info.carinyavillage.com.au</li>
         </ul>
     </div>
     <!-- Offcanvas Menu Section End -->
@@ -74,7 +74,7 @@
                         <ul class="tn-left">
                             <li><i class="fa fa-phone"></i> (61) 0490 547 167</li>
                                <li><i class="fa fa-phone"></i> (61)0452 552 467 </li>
-                            <li><i class="fa fa-envelope"></i> info@carniyavillage.com.au</li>
+                            <li><i class="fa fa-envelope"></i> info@carinyavillage.com.au</li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -96,7 +96,7 @@
                         <div class="logo">
                             <a href="./index.html">
                                 <img id="carniya-logo" src="img/laterEdits/carniyalogo.jpg"  alt="">
-                                <h2 id="text-style">Carniya Village Jindabyne</h2>
+                                <h2 id="text-style">Carinya Village Jindabyne</h2>
                             </a>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                 <div class="col-lg-4">
                     <div class="contact-text">
                         <h2>Contact Info</h2>
-                        <p>Get in Touch with Carniya Village Hotel: Contact Us Today. Our friendly staff is ready to assist you with any questions or booking inquiries you may have..</p>
+                        <p>Get in Touch with Carinya Village Hotel: Contact Us Today. Our friendly staff is ready to assist you with any questions or booking inquiries you may have..</p>
                         <table>
                             <tbody>
                                 <tr>
@@ -136,7 +136,7 @@
                                 </tr>
                                 <tr>
                                     <td class="c-o">Email:</td>
-                                    <td>info@carniyavillage.com.au</td>
+                                    <td>info@carinyavillage.com.au</td>
                                 </tr>
                                
                             </tbody>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Carniya Village,<br> Jindabyne</p></div>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Carinya Village,<br> Jindabyne</p></div>
                     </div>
                 </div>
             </div>
