--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carniya Village</title>
+    <title>Carinya Village</title>
      <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
         <ul class="top-widget">
             <li><i class="fa fa-phone"></i> (61) 0452 552 467</li>
               <li><i class="fa fa-phone"></i> (61) 0490 547 167</li>
-            <li><i class="fa fa-envelope"></i> info.carniyavillage.com.au</li>
+            <li><i class="fa fa-envelope"></i> info.carinyavillage.com.au</li>
         </ul>
     </div>
     <!-- Offcanvas Menu Section End -->
@@ -72,7 +72,7 @@
                             <!-- <li><i class="fa fa-phone"></i> (12) 345 67890</li> -->
                              <li><i class="fa fa-phone"></i> (61) 0452 552 467</li>
               <li><i class="fa fa-phone"></i> (61) 0490 547 167</li>
-                            <li><i class="fa fa-envelope"></i> info@carniyavillage.com.au</li>
+                            <li><i class="fa fa-envelope"></i> info@carinyavillage.com.au</li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
@@ -94,7 +94,7 @@
                         <div class="logo">
                             <a href="./index.html">
                                 <img id="carniya-logo" src="img/laterEdits/carniyalogo.jpg"  alt="">
-                                <h2 id="text-style">Carniya Village Jindabyne</h2>
+                                <h2 id="text-style">Carinya Village Jindabyne</h2>
                             </a>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
     <section id="cards-wrapper">
         <div id="cards-wrapper-header">
             <h1>
-                Checkout the beautiful Carniya!
+                Checkout the beautiful Carinya!
             </h1>
         </div>
 
@@ -270,7 +270,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Carniya Village,<br> Jindabyne</p></div>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Carinya Village,<br> Jindabyne</p></div>
                     </div>
                 </div>
             </div>
