--- a/about-us.html
+++ b/about-us.html
@@ -151,7 +151,7 @@
                         <div class="ap-title">
                             <h2>Welcome To Carinya.</h2>
                             <p>Carinya Village Jindabyne is nestled in the foothills of the Snowy Mountains on the banks of the Mowamba River, just 35 minutes from Australia’s major ski resorts. 
-Carniya offers comfortable, well-appointed self-contained cabins – we have Double rooms with Ensuite or a 10 bed Timber cottage or perhaps a 2 bed bunk room.
+Carinya offers comfortable, well-appointed self-contained cabins – we have Double rooms with Ensuite or a 10 bed Timber cottage or perhaps a 2 bed bunk room.
 Come to Carinya with family, a friend, group of friends, sports club, church, or School group for a quiet family holiday in summer, or a reasonably priced ski package in winter.
 We can tailor a holiday package to suit any budget or group requirements.</p>
                         </div>
