--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,6 @@
     </section>
     <!-- Contact Section End -->
 
-    <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container">
             <div class="footer-text">
@@ -169,11 +168,8 @@
                             </div>
                             <p>We inspire and reach millions of travelers<br /> across Australia</p>
                             <div class="fa-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-tripadvisor"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
+                                <a href="https://www.facebook.com/people/Carinya-Alpine-Village/100091690917040/?mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a>
+                               
                             </div>
                         </div>
                     </div>
@@ -203,14 +199,6 @@
         <div class="copyright-option">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
-                        <ul>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Privacy</a></li>
-                            <li><a href="#">Environmental Policy</a></li>
-                        </ul>
-                    </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Carinya Village,<br> Jindabyne</p></div>
