--- a/about-us.html
+++ b/about-us.html
@@ -151,7 +151,7 @@
                         <div class="ap-title">
                             <h2>Welcome To Carinya.</h2>
                             <p>Carinya Village Jindabyne is nestled in the foothills of the Snowy Mountains on the banks of the Mowamba River, just 35 minutes from Australia’s major ski resorts. 
-Carinya offers comfortable, well-appointed self-contained cabins – we have Double rooms with Ensuite or a 10 bed Timber cottage or perhaps a 2 bed bunk room.
+Carniya offers comfortable, well-appointed self-contained cabins – we have Double rooms with Ensuite or a 10 bed Timber cottage or perhaps a 2 bed bunk room.
 Come to Carinya with family, a friend, group of friends, sports club, church, or School group for a quiet family holiday in summer, or a reasonably priced ski package in winter.
 We can tailor a holiday package to suit any budget or group requirements.</p>
                         </div>
@@ -268,11 +268,8 @@ We can tailor a holiday package to suit any budget or group requirements.</p>
                             </div>
                             <p>We inspire and reach millions of travelers<br /> across Australia</p>
                             <div class="fa-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-tripadvisor"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
+                                <a href="https://www.facebook.com/people/Carinya-Alpine-Village/100091690917040/?mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a>
+                               
                             </div>
                         </div>
                     </div>
@@ -302,14 +299,6 @@ We can tailor a holiday package to suit any budget or group requirements.</p>
         <div class="copyright-option">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
-                        <ul>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Privacy</a></li>
-                            <li><a href="#">Environmental Policy</a></li>
-                        </ul>
-                    </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, Carinya Village,<br> Jindabyne</p></div>
