--- a/about-us.html
+++ b/about-us.html
@@ -50,8 +50,10 @@
             <ul>
                 <li ><a href="./index.html">Home</a></li>
                 <li class="active"><a href="./about-us.html">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+               
                 <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./snowcam.html">Snow Cams</a></li>
+                <li><a href="./contact.html">Contact</a></li>
 
             </ul>
         </nav>
@@ -112,6 +114,7 @@
                                     <li ><a href="./index.html">Home</a></li>
                                     <li class="active"><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./gallery.html">Gallery</a></li>
+                                    <li><a href="./snowcam.html">Snow Cams</a></li>
                                     <li><a href="./contact.html">Contact</a></li>
                                 </ul>
                             </nav>
