--- a/gallery.html
+++ b/gallery.html
@@ -44,8 +44,10 @@
             <ul>
                 <li ><a href="./index.html">Home</a></li>
                 <li><a href="./about-us.html">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                
                 <li class="active"><a href="./gallery.html">Gallery</a></li>
+                <li><a href="./snowcam.html">Snow Cams</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -106,6 +108,7 @@
                                     <li><a href="./about-us.html">About Us</a></li>
                                     <!-- <li><a href="./blog.html"></a></li> -->
                                     <li class="active"><a href="./gallery.html">Gallery</a></li>
+                                    <li><a href="./snowcam.html">Snow Cams</a></li>
                                     <li><a href="./contact.html">Contact</a></li>
                                 </ul>
                             </nav>
