--- a/snowcam.html
+++ b/snowcam.html
@@ -152,7 +152,7 @@
             </div>
             <div class="iframe-desc">
                 <p>
-                    Carinya Village in is conveniently located just 33 kilometers (20.5 miles) away from Perisher Ski Resort, making it an ideal base for winter adventures. Visitors can immerse themselves in a range of thrilling snow activities such as skiing, snowboarding, snowshoeing, and snow tubing. With picturesque trails, cross-country skiing options, and even snowmobile tours. Carinya Village provides easy access to an array of exciting activities at Perisher Ski Resort.
+                    Carinya Village is conveniently located just 33 kilometers (20.5 miles) away from Perisher Ski Resort, making it an ideal base for winter adventures. Visitors can immerse themselves in a range of thrilling snow activities such as skiing, snowboarding, snowshoeing, and snow tubing. With picturesque trails, cross-country skiing options, and even snowmobile tours. Carinya Village provides easy access to an array of exciting activities at Perisher Ski Resort.
                 </p>
             </div>
         </div>
